	- [Minor] Solaris Sparc + IP-Filter compile error (Bug #1374)
	- [Minor] E-mail sent when cache dies is blocked from many antispam
	  rules (Bug #1380)
	- [Minor] LDAP helpers does not work with TLS (-Z option) (Bug #1389)
	- [Cosmetic] Incorrect store dir selection debug message on objects
	  larger than 2Gigabyte (Bug #1343)
	- [Cosmetic] header_id enum misused as an signed integer (Bug #1343)
	- [Coemetic] Allow leaving core dumps when started as root (Bug #1335)

Changes to squid-2.5.STABLE10 (17 May 2005)

	- [Minor Security] Fix race condition in relation to old Netscape
	  Set-Cookie specifications
	- [Minor] Fails to parse D.J.  Bernstein's FTP EPLF ftp listing
          format and PASV resposes (Bug #1252)
	- [Medium] BASE HREF missing on ftp directory URLs without /
	  (Bug #1253)
	- [Minor security] confusing http_access results on configuration
	  error (Bug #1255)
	- [Cosmetic] More robust Date parser (Bug #321)
	- [Minor] reload_with_ims fails to refresh negatively cached objects
	  (Bug #1159)
	- [Cosmetic] delay_access description clarification (Bug #1245)
	- [Cosmetic] Check for integer overflow in size specifications in
	  squid.conf (Bug #1247)
	- [Cosmetic] bzero is a non-standard function not available on all
	  platforms (Bug #1256)
	- [Cosmetic] Compiler warnings if pid_t is not an int (Bug #1257)
	- [Cosmetic] Incorrect use of ctype functions (Bug #1259)
	- [Cosmetic] Defer digest fetch if the peer is not allowed to be used
	  (Bug #1261)
	- [Minor] Duplicate content-length headers logged incorrectly or
	  not cleaned up properly (Bug #1262)
	- [Cosmetic] Extend relaxed_header_parser to work around "excess
	  data from" errors from many major web servers. (Bug #1265)
	- [Minor] Add HTTP headers to a netdb error messages
	- [Minor] Multiple minor aufs issues (Bug #671)
	- [Minor] Basic authentication fails with very long logins or
	  password (Bug #1171)
	- [Minor] CONNECT requests truncated if client side disconnects first
	  (Bug #1269)